--- a/public/404.html
+++ b/public/404.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The page you were looking for doesn't exist (404)</title>
+	<meta charset="UTF-8">
+  <title>Страница, которую вы запрашиваете, не существует.</title>
   <style type="text/css">
     body { background-color: #fff; color: #666; text-align: center; font-family: arial, sans-serif; }
     div.dialog {
-      width: 25em;
+      width: 30em;
       padding: 0 4em;
       margin: 4em auto 0 auto;
       border: 1px solid #ccc;
@@ -19,8 +20,8 @@
 <body>
   <!-- This file lives in public/404.html -->
   <div class="dialog">
-    <h1>The page you were looking for doesn't exist.</h1>
-    <p>You may have mistyped the address or the page may have moved.</p>
+    <h1>Страница, которую вы запрашиваете, не существует.</h1>
+    <p>Возможно вы совершили опечатку или страница была удалена.</p>
   </div>
 </body>
 </html>
