--- a/public/422.html
+++ b/public/422.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The change you wanted was rejected (422)</title>
+	<meta charset="UTF-8">
+  <title>Запрашиваемое вами действие отменено.</title>
   <style type="text/css">
     body { background-color: #fff; color: #666; text-align: center; font-family: arial, sans-serif; }
     div.dialog {
-      width: 25em;
+      width: 30em;
       padding: 0 4em;
       margin: 4em auto 0 auto;
       border: 1px solid #ccc;
@@ -19,8 +20,8 @@
 <body>
   <!-- This file lives in public/422.html -->
   <div class="dialog">
-    <h1>The change you wanted was rejected.</h1>
-    <p>Maybe you tried to change something you didn't have access to.</p>
+    <h1>Запрашиваемое вами действие отменено.</h1>
+    <p>Возможно, вы пытаетесь совершить действие, для выполнения которого у вас недостаточно прав.</p>
   </div>
 </body>
 </html>
