--- a/public/500.html
+++ b/public/500.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>We're sorry, but something went wrong (500)</title>
+	<meta charset="UTF-8">
+  <title>Произошла внутрення ошибка приложения</title>
   <style type="text/css">
     body { background-color: #fff; color: #666; text-align: center; font-family: arial, sans-serif; }
     div.dialog {
-      width: 25em;
+      width: 30em;
       padding: 0 4em;
       margin: 4em auto 0 auto;
       border: 1px solid #ccc;
@@ -19,8 +20,8 @@
 <body>
   <!-- This file lives in public/500.html -->
   <div class="dialog">
-    <h1>We're sorry, but something went wrong.</h1>
-    <p>We've been notified about this issue and we'll take a look at it shortly.</p>
+    <h1>Произошла внутрення ошибка приложения</h1>
+    <p>Мы постараемся решить эту проблему как можно быстрее.</p>
   </div>
 </body>
 </html>
