--- a/public/404.html
+++ b/public/404.html
@@ -3,6 +3,9 @@
 <head>
 	<meta charset="UTF-8">
   <title>Страница, которую вы запрашиваете, не существует.</title>
+  <link href="main.css" media="screen" rel="stylesheet" type="text/css" />
+  
+  
   <style type="text/css">
     body { background-color: #fff; color: #666; text-align: center; font-family: arial, sans-serif; }
     div.dialog {
@@ -15,13 +18,14 @@
     }
     h1 { font-size: 100%; color: #f00; line-height: 1.5em; }
   </style>
+  
 </head>
 
 <body>
-  <!-- This file lives in public/404.html -->
+	<!-- This file lives in public/404.html -->  
   <div class="dialog">
-    <h1>Страница, которую вы запрашиваете, не существует.</h1>
-    <p>Возможно вы совершили опечатку или страница была удалена.</p>
+	<h1>Страница, которую вы запрашиваете, не существует.</h1>
+	<p>Возможно вы совершили опечатку или страница была удалена.</p>
   </div>
 </body>
 </html>
